1. Загрузка данных в вид [#295782]

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,37 @@
     <title>Автонарушители</title>
 </head>
 <body>
-<div class="container">
+<div class="container mt-2">
+    <h3>Проект job4j_accidents, выполняемый в расмках курса Job4j</h3>
+    <div class="container-fluid p-0">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="/">Job4jAccidents</a>
+                <div class="collapse navbar-collapse">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link active" href="/">Главная</a>
+                        <a class="nav-item nav-link" th:href="@{/users}">Пользователи</a>
+                        <a class="nav-item nav-link" th:href="@{/inspectors}">Инспекторы</a>
+                    </div>
+                    <div class="d-flex" th:if="${user.name == 'Гость'}">
+                        <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
+                        <a class="nav-link text-secondary" th:href="@{/users/login}">Войти</a>
+                    </div>
+                    <div class="d-flex" th:if="${user.name != 'Гость'}">
+                        <a class="nav-link text-secondary me-3" href="#" th:text="${user.name}"></a>
+                        <a class="nav-link text-secondary" th:href="@{/users/logout}">Выйти</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="container mt-2">
+            <h3>Проект job4j_accidents</h3>
+            <ul>
+                <li><a th:href="@{/users}">Пользователи</a></li>
+                <li><a th:href="@{/inspectors}">Инспекторы</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 </body>
 </html>
