--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,6 +54,8 @@
                     </thead>
                     <tbody>
                     <tr th:each="accident: ${accidents}">
+                        <td><a th:text="${accident.name}"
+                               th:href="@{/accident/{accidentId}(accidentId=${accident.id})}"></a></td>
                         <td th:text="${accident.name}"/>
                         <td th:text="${accident.text}"/>
                         <td th:text="${accident.address}"/>
